# DropWire

./: .gitignore  COMPETITION_ENTRY.md  FEATURES.md  README.md  SCREENSHOTS.md  局域网传文件软件 计划书.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: discovery.rs  main.rs  state.rs
backend/src/models/: mod.rs
backend/src/routes/: auth.rs  auth_middleware.rs  info.rs  mod.rs  network.rs  upload.rs  ws.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: AccountModal.vue  DeviceList.vue  FileDetailModal.vue  FilePreviewModal.vue  FileUpload.vue  HistoryModal.vue  NetworkTestPanel.vue  NetworkTopologyChart.vue  ReceiveView.vue  SendView.vue  SettingsView.vue  SpeedGauge.vue
frontend/src/composables/: useAuth.ts  useCrypto.ts  useDevices.ts  useDownload.ts  useHash.ts  useHistory.ts  useNetworkSpeed.ts  useNetworkTest.ts  useNotifications.ts  useRateLimit.ts  useServerInfo.ts  useSettings.ts  useUpload.test.ts  useUpload.ts  useWebSocket.ts
frontend/src/workers/: crypto.worker.ts
