[package]
name = "dropwire-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
local-ip-address = "0.6"
whoami = "1"
socket2 = { version = "0.5", features = ["all"] }
mdns-sd = "0.11"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
crc32fast = "1.3"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
